[tool.poetry]
name = "pines"
version = "0.1.0"
description = "Perioidic Inference and Nested Episodic Service"
authors = ["ygivenx <singhrohan@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
pandas = "^2.0.3"
numpy = "^1.25.2"
SQLAlchemy = "^2.0.19"
fastapi = "^0.101.0"
flake8 = "^6.1.0"
pylint = "^2.17.5"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.7"
ipykernel = "^6.25.1"
small-text = {version = "^1.3.1", extras = ["transformers"]}
ipywidgets = "^8.1.0"
uvicorn = {version = "^0.23.2", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
