[tool.poetry]
name = "PINES"
version = "0.1.0"
description = "API to serve pines models"
authors = ["Rohan Singh <singhrohan@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
transformers = "^4.36.2"
torch = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pip-audit = "^2.7.0"
mkdocs-bibtex = "^2.12.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs = "^1.5.3"
mkdocs-swagger-ui-tag = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
